# wamv_description

./: .mergify.yml  CMakeLists.txt  README.md  dependency.repos  package.xml
.github/workflows/: BuildTest.yaml  ROS2-Dashing.yaml  ROS2-Eloquent.yaml  ROS2-Foxy.yaml  ROS2-Galactic.yaml
config/: controllers.yaml
launch/: wamv_description.launch.py
script/: tcp_server.py
urdf/: battery.xacro  cpu_cases.xacro  wamv.ros2_control.xacro  wamv.urdf.xacro  wamv_base.urdf.xacro  wamv_dummy.urdf.xacro
urdf/sensors/: camera.xacro  lidar.xacro
urdf/thrusters/: azimuth_thruster.xacro  engine.xacro  main_thruster.xacro  thruster.xacro  thrusters.xacro
